# veraks-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  seed.py
.github/workflows/: deploy.yml
alembic/: README.md  env.py
alembic/versions/: 0001_create_users.py  0002_create_events.py  0003_create_predictions.py  0004_create_ratings.py  0005_create_seasons.py  0006_add_ratings_qualified.py  0007_link_events_season_fk.py  0008_create_audit_log.py  0009_create_resolutions_disputes.py  0010_create_billing_ledger.py  0011_revoke_append_only_grants.py  0012_subscription_plan_tariffs.py  0013_event_status_proposed.py  0014_create_notifications.py  0015_create_social.py  0016_create_leagues.py  0017_prize_fund_sponsor_user.py  0018_create_api_keys.py  0019_ledger_payout_guards.py  0020_resolution_race_guards.py  0021_finalizations_append_only.py  0022_tbank_ops_account.py  0023_jump_payout_requisites.py
app/: __init__.py  config.py  main.py  redis.py  worker.py
app/db/: __init__.py  base.py  session.py
app/middleware/: rate_limit.py
app/modules/: __init__.py
tests/: conftest.py  test_rate_limit.py
tests/b2b/: fakes.py
tests/billing/: conftest.py  fakes.py
tests/e2e/: conftest.py  helpers.py  test_b2b.py  test_billing.py  test_flow.py  test_leagues.py  test_schema.py  test_social.py  test_sponsor.py  test_subscription_gate.py
tests/events/: conftest.py  fakes.py
tests/identity/: fakes.py
tests/predictions/: conftest.py  fakes.py
tests/resolutions/: conftest.py  fakes.py
tests/scoring/: conftest.py  fakes.py
(+287 files in other folders)
